My job is done. Not completely ... but most). Thanks to those who read at least some commits. I am very grateful to you !. Develop and progress, and never stop! And I went looking for something to do next).

--- a/App.xaml
+++ b/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Styles/ComboBoxStyles.xaml"/>
                 <ResourceDictionary Source="Styles/DataGridStyles.xaml"/>
+                <ResourceDictionary Source="Styles/GroupBoxStyles.xaml"/>
                 <ResourceDictionary Source="Styles/OtherStyles.xaml"/>
                 <ResourceDictionary Source="Styles/ProgressBarStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TextBlockStyles.xaml"/>
