--- a/Styles/BorderStyles.xaml
+++ b/Styles/BorderStyles.xaml
@@ -24,6 +24,15 @@
             <Setter Property="Effect" Value="{StaticResource PressedSurfaceBlockShadow}"/>
         </Style.Setters>
     </Style>
+    
+    <Style x:Key="ManualUpdatedBorder" TargetType="Border">
+        <Style.Setters>
+            <Setter Property="CornerRadius" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Effect" Value="{StaticResource PressedSurfaceBlockShadow}"/>
+        </Style.Setters>
+    </Style>
 
     <Style x:Key="MainCanvasBorder" TargetType="Border">
         <Style.Setters>
