--- a/Styles/OtherStyles.xaml
+++ b/Styles/OtherStyles.xaml
@@ -35,7 +35,40 @@
             </Trigger>
             <EventTrigger RoutedEvent="MouseEnter">
                 <EventTrigger.Actions>
-                    <SoundPlayerAction Source="Sounds\EnterAction.wav"/>
+                    <SoundPlayerAction Source="Sounds\LongClick.wav"/>
+                </EventTrigger.Actions>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="Sword" TargetType="Image">
+        <Style.Setters>
+            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TranslateTransform/>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="Loaded">
+                <EventTrigger.Actions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBox.RenderTransform).(TranslateTransform.Y)"
+                                             AutoReverse="True"
+                                             RepeatBehavior="Forever">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.9" Value="-2"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:1.8" Value="-3"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:2.7" Value="-4"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:3.6" Value="-5"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:4.5" Value="-4"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:5.4" Value="-3"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:6.3" Value="-2"/>
+                                <EasingDoubleKeyFrame KeyTime="0:0:7.2" Value="0"/>
+                            </DoubleAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </BeginStoryboard>
                 </EventTrigger.Actions>
             </EventTrigger>
         </Style.Triggers>
