--- a/Templates/TextBoxTemplates.xaml
+++ b/Templates/TextBoxTemplates.xaml
@@ -8,14 +8,7 @@
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
                     <VisualState x:Name="Normal" />
-                    <VisualState x:Name="Disabled">
-                        <Storyboard>
-                            <ColorAnimation Duration="0:0:0.25" To="LightSlateGray"
-                                            Storyboard.TargetProperty="(TextBox.Foreground).(SolidColorBrush.Color)"/>
-                            <DoubleAnimation Duration="0:0:0.25" To="0.25"
-                                             Storyboard.TargetProperty="Opacity"/>
-                        </Storyboard>
-                    </VisualState>
+                    <VisualState x:Name="Disabled"/>
                     <VisualState x:Name="ReadOnly"/>
                     <VisualState x:Name="MouseOver"/>
                 </VisualStateGroup>
